test/domains/neth/nonHomoScalar2.good
nonHomoScalar2.chpl:1: error: Domains defined using tuple bounds must use homogenous tuples, but got '(int(64),real(64))'
